--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Hyderabad
           </em>
         </p>
-        <a href="/Users/thejachowdary/Documents/Web Development/HTML-Personal Site/Mycontact.html">Contact details</a>
+        <a href="Mycontact.html">Contact details</a>
       </td>
 
     </tr>
